--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="hero-container">
                 <div class="hero-image-container">
                     <!-- SUA FOTO DE PERFIL -->
-                    <img src="./img/Perfil.jpg" 
+                    <img src="./img/Perfil.jpeg" 
                          alt="Marcos Vinicius" 
                          class="hero-profile"
                          onerror="this.src='./img/Perfil.jpg';this.alt='Foto de perfil não encontrada'">
@@ -88,8 +88,8 @@
                     <div class="service-icon">
                         <i class="fas fa-server"></i>
                     </div>
-                    <h3 class="service-title">Infraestrutura de TI</h3>
-                    <p>Configuração e manutenção de redes, servidores e infraestrutura de TI, garantindo alta disponibilidade e segurança.</p>
+                    <h3 class="service-title">Manutenção de Hardware e Sofware</h3>
+                    <p>Configuração e manutenção em Computadores e Notebooks, garantindo alta performace e segurança.</p>
                 </div>
                 
                 <div class="service-card">
@@ -97,7 +97,7 @@
                         <i class="fas fa-tools"></i>
                     </div>
                     <h3 class="service-title">Suporte Técnico</h3>
-                    <p>Manutenção de hardware, solução de problemas técnicos e suporte a usuários finais com eficiência e profissionalismo.</p>
+                    <p>Solução de problemas técnicos e suporte a usuários finais com eficiência e profissionalismo.</p>
                 </div>
             </div>
         </div>
@@ -355,29 +355,29 @@
                 this.container = document.getElementById('projectsContainer');
                 this.projects = [
                     {
-                        title: "Sistema de Gestão Web",
+                        title: "Sistema Login com Criptofrafia",
                         tags: ["php", "mysql", "javascript"],
-                        image: "https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80",
-                        link: "#"
+                        image: "./img/Login.png",
+                        link: "https://vinicius-souza18.github.io/LoginPhP/"
                     },
                     {
-                        title: "Portal Corporativo",
-                        tags: ["php", "javascript", "bootstrap"],
-                        image: "https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80",
-                        link: "#"
+                        title: "Langing page de Estetica",
+                        tags: ["css", "javascript", "html"],
+                        image: "./img/Estetica.png",
+                        link: "https://vinicius-souza18.github.io/Cosmeticos/"
                     },
                     {
-                        title: "Aplicativo de Suporte Técnico",
+                        title: "Site de pizza",
                         tags: ["javascript", "node", "react"],
-                        image: "https://images.unsplash.com/photo-1611162617213-7d7a39e9b1d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80",
-                        link: "#"
+                        image: "./img/Pizaria.png",
+                        link: "https://vinicius-souza18.github.io/Pizaria/"
                     },
-                    {
+                   /* {
                         title: "Sistema de Inventário de TI",
                         tags: ["php", "mysql", "api"],
                         image: "https://images.unsplash.com/photo-1555529669-e69e7aa0ba9a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80",
                         link: "#"
-                    }
+                    }*/
                 ];
                 
                 this.renderProjects();
