--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="hero-text">
                     <h1 class="hero-title">Olá, eu sou Marcos Vinicius, <span class="typewriter" id="typewriter"></span></h1>
-                    <p class="hero-subtitle">Desenvolvedor Full Stack especializado em PHP, JavaScript e MySQL, com experiência em infraestrutura de TI e suporte técnico.</p>
+                    <p class="hero-subtitle">Desenvolvedor Full Stack especializado em PHP, JavaScript e MySQL, com experiência em infraestrutura de TI, Manutençõa de Hardware e suporte técnico.</p>
                     
                     <div class="hero-buttons">
                         <a href="#contato" class="btn btn-primary">
@@ -211,10 +211,10 @@
                 </form>
                 
                 <div class="social-links">
-                    <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                    <a href="https://github.com/Vinicius-Souza18" class="social-link"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+                    <!--<a href="#" class="social-link"><i class="fab fa-twitter"></i></a>-->
+                    <a href="https://www.instagram.com/vinicius_souza366?igsh=MTVna2NpeXIyZWxjaw%3D%3D&utm_source=qr" class="social-link"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -368,7 +368,7 @@
                     },
                     {
                         title: "Site de pizza",
-                        tags: ["javascript", "node", "react"],
+                        tags: ["html", "css",],
                         image: "./img/Pizaria.png",
                         link: "https://vinicius-souza18.github.io/Pizaria/"
                     },
